fixed navigation overflow

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
     position: fixed;
     left: 0;
     top: 0;
-    overflow: hidden;
+    overflow-x: hidden;
   
     padding: 8px;
   
